--- a/style.css
+++ b/style.css
@@ -1,10 +1,113 @@
 /* CSS DOCUMENT */ 
 
+/* GENERAL */
+
+*
+{
+    font-family: sans-serif;
+}
+
 body
 {
     background-color: #9984D4;
 }
 
-/* GENERAL */
+#Container
+{
+    background-color: #fff;
+    width: 65%;
+    margin: 40px auto;
+    padding: 5px 10px;
+}
+
+hr
+{
+    height: 0.1px;
+    background-color: #9984D4;
+    margin: 15px 0;
+}
 
 /* RULES */
+
+/* HEADER */
+
+header > strong
+{
+    font-size: 15px;
+}
+
+.Logo
+{
+    height: 80px;
+    vertical-align: middle;
+    margin-right: 5px;
+}
+
+
+/* MAIN  parte 1*/
+
+#cerca
+{
+    border: 1px solid black;
+    padding: 4px 1px;
+}
+
+#vai
+{
+    background-color: #C4C4C4;
+    padding: 4px 1px;
+    border-radius: 15%;
+    border: 1px solid black;
+}
+
+main p
+{
+    line-height: 30px;
+}
+
+
+Main #thirty
+{
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #9984D4;
+    text-align: center;
+    color: #fff;
+}
+
+/* MAIN parte 2 */
+
+main > div
+{
+    background-color: #C4C4C4;
+    padding: 4px 2px;
+}
+.no-bg
+{
+    background-color: initial;
+}
+
+.checkbox
+{
+    vertical-align: middle;
+}
+
+label
+{
+    line-height: 50%;
+}
+
+#star
+{
+    background-color: #7594A7;
+}
+
+/* FOOTER */
+
+footer
+{
+    text-align: center;
+    font-size: 10px;
+}
